# TransactionManager

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  config.ini  setup.sh  uninstall.sh
client/: client.py
include/: alias.h  api_store.h  config_accessor.h  constant.h  data.h  packet_sender.h  result.h  signal.h  state.h  transaction_manager.h  utils.h
service/: transaction-manager.service
src/: api_store.cpp  config_accessor.cpp  constant.cpp  main.cpp  packet_sender.cpp  state.cpp  transaction_manager.cpp  utils.cpp
